--- a/src/app/(visitor)/components/EventList/eventlist.module.css
+++ b/src/app/(visitor)/components/EventList/eventlist.module.css
@@ -1,5 +1,61 @@
-.eventList{
-  display: flex;
-  gap: 1rem; 
-  flex-wrap: wrap;
+/* Extra small devices (phones, 450x and down) */
+.eventList {
+    display: flex;
+    flex-direction: column;
+    gap: 4rem;
+}
+
+.eventCard {
+    background-color: var(--gray-dark);
+    border-radius: 5px;
+}
+
+.eventCard > img {
+    border-top-left-radius: 5px;
+    border-top-left-radius: 5px;
+
+    width: 100%;
+    height: 8rem;
+    object-fit: cover;
+}
+
+.eventCardMainContent {
+    padding: 1rem;
+}
+
+.eventCardMainContent div:nth-of-type(1) {
+    display: flex;
+    gap: 0.5rem;
+    margin-bottom: 1rem;
+}
+
+.eventCardMainContent div:nth-of-type(2) h5 {
+    font-size: 1.4rem;
+}
+
+.eventCardMainContent div:nth-of-type(2) p {
+    display: none;
+}
+
+@media only screen and (min-width: 450px) {
+    .eventList {
+        border: 2px solid red;
+        flex-direction: row;
+        flex-wrap: wrap;
+        gap: 2rem;
+    }
+
+    .eventCard {
+      height: 25rem;
+      width: 100%;
+      max-width: 30rem;
+      /* 
+      quero que o elemento ocupe todo o espaço disponivel
+      mas que quando ele alcande um determinado tamanho maximo, os elemtnos quebrem para a prox linhas
+      nessa quebra todos os elementos tem de ter esse determinado tamanho
+      nao deve ter espaços sobrando dentro do wrapper
+       */
+      
+       
+    }
 }
