--- a/src/app/(visitor)/components/EventList/eventlist.module.css
+++ b/src/app/(visitor)/components/EventList/eventlist.module.css
@@ -3,12 +3,14 @@
     display: grid;
     row-gap: 4rem;
     grid-template-columns: 100%;
-    grid-auto-rows: 15rem;
+    grid-auto-rows: minmax(15rem, fit-content);
 }
 
 .eventCard {
     background-color: var(--gray-dark);
     border-radius: 5px;
+    display: flex;
+    flex-direction: column;
 }
 
 .eventCard > img {
@@ -16,12 +18,14 @@
     border-top-left-radius: 5px;
 
     width: 100%;
-    height: 8rem;
     object-fit: cover;
 }
 
 .eventCardMainContent {
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    flex-grow: 1;
 }
 
 .eventCardMainContent div:nth-of-type(1) {
@@ -30,8 +34,21 @@
     margin-bottom: 1rem;
 }
 
+.eventCardMainContent div:nth-of-type(1) > * {
+   font-size: 1.4rem;
+}
+
 .eventCardMainContent div:nth-of-type(2) h5 {
-    font-size: 1.4rem;
+    font-size: 1.6rem;
+    margin-bottom: 0.4rem;
+}
+
+.eventCardMainContent div:nth-of-type(2) {
+    flex-grow: 1;
+    overflow: hidden;
+     display: -webkit-box;
+    -webkit-line-clamp: 4;
+    -webkit-box-orient: vertical; 
 }
 
 .eventCardMainContent div:nth-of-type(2) p {
@@ -42,7 +59,12 @@
     .eventList {
         grid-template-columns: repeat(3, minmax(100px, 100%));
         column-gap: 4rem;
-        grid-auto-rows: 25rem;
+        grid-auto-rows: 28rem;
+    }
+
+    .eventCardMainContent div:nth-of-type(2) p {
+        display: initial;
+        font-size: 1.6rem;
     }
 }
 
