--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,10 @@
+/*tailwind base imports */
 @tailwind base;
+
+/*tailwind components imports */
 @tailwind components;
+
+/*tailwind utilities imports */
 @tailwind utilities;
 
 * {
@@ -27,6 +32,7 @@ body > main {
 
 @layer base {
   :root {
+        --radius: 0.5rem;
         --radius: 0.5rem;
     }
 }
